Updating skill set

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    <div class="journey-container js-scroll slide-right">
     <h1 class="text-redish">Journey</h1>
     <p>
-      “I’ve been passionate about technology since I was able to type. Have always 
+      “I’ve been passionate about technology as long as i can remember. Have always 
       set my mind to new innovations and inventiosn of mankind on technology. 
       I knew that pursuing technological oriented course was a must to suit my passion, 
       since I could not resist the inner me pushing towards tech, 
@@ -92,23 +92,52 @@
   <section class="scroll-container" id="skills">
   <div class="scroll-element" style="background: #f8f9fa;">
      <div class="skills-holder">
+       <!--  Start of Technology treands -->
         <div class="technology-container js-scroll slide-left">
     <h1 class="text-redish">Technology trands</h1>
-     <table>
-      <tr>
-        <td> <br><div class="piechartgit"><strong>Git and Github 70%  
-        </strong> </div><br></td>
-        <td><div class="piechartiot"><strong>Machine Learning 60%
-           <br>
-        </strong> </div></td>
-      </tr>
-       <tr >
-        <td> <div class="piechartvue"><strong>Interet of Things 60% <br>
-        </strong></div></td>
-      </tr>
-    </table>
+      <div class="tech-holder">
+        <div class="tech-item-holder">
+          <div class="tech-item" style="background: #000000;"><center> <img src="images/github.jpg" width="120px" style="border-radius: 50%;"></center> </div>
+        </div>
+        <div class="tech-details">
+            <p style="color: #f05134; padding: 4px;">
+
+              <b><u>Git and Github</u></b><br>
+              One of my best colaboration and version control system
+            </p>
+        </div>
+      </div>
+
+      <div class="tech-holder">
+        <div class="tech-item-holder">
+          <div class="tech-item"><center> <img src="images/iot.jpg" width="120px" style="border-radius: 50%;"></center> </div>
+        </div>
+        <div class="tech-details">
+            <p style="color: #f05134; padding: 4px;">
+
+              <b><u>Internet of Things</u></b><br>
+              Let the devices communicate to themselves
+            </p>
+        </div>
+      </div>
+
+        <div class="tech-holder">
+        <div class="tech-item-holder">
+          <div class="tech-item"><center> <img src="images/automation.jpg" width="120px" style="border-radius: 50%;"></center> </div>
+        </div>
+        <div class="tech-details">
+            <p style="color: #f05134; padding: 4px;">
+
+              <b><u>Automation</u></b><br>
+              Let the devices communicate to themselves
+            </p>
+        </div>
+      </div>
    
   </div>
+  <!--  end of Technology treands -->
+
+   <!--  Start of frameworks -->
    <div class="framework-container js-scroll slide-right">
     <h1 class="text-redish">Frameworks</h1>
       <div class="framework-rates">
@@ -207,6 +236,8 @@
     
     
   </div>
+
+   <!--  end of frameworks -->
   </div>
    <div class="language-container js-scroll fade-in-bottom">
     <h1 class="text-redish">Languages</h1>
@@ -660,7 +691,7 @@
         <div class="image-container js-scroll slide-right">
     <h1>IoT Demonstration</h1>
          <div class="images-shape">
-           <img src="images/iot.jpg" width="310px" class="image-change" alt="event image">
+           <img src="images/iotdemo.jpg" width="310px" class="image-change" alt="event image">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
@@ -724,7 +755,7 @@
 
 
 <script type="text/javascript" src="scripts/morecert.js"></script>
- <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+ <!-- <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script> -->
 <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 <script type="text/javascript" src="scripts/my-web-dan.js"></script>
 <script type="text/javascript" src="scripts/scroll.js"></script>
